Add v1beta1 canary example and improve status print (#1267)
* Track last rolled out revision

* Print out previous rolled out revison and last ready revision

* Fix canary test

* Update canary example readme

* Fix status print

* Fix resources

* Update apidoc
